--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-streamlit>=1.17.0
-pandas>=2.0
-numpy>=1.23
-plotly>=5.15
-sqlalchemy>=2.0
-python-dotenv>=1.0
-yfinance>=0.2
+streamlit==1.51.0
+pandas==2.3.3
+numpy==2.3.5
+plotly==6.4.0
+sqlalchemy==2.0.44
+yfinance==0.2.66
+pyodbc==5.1.0
+python-dotenv==1.2.1
+requests==2.32.5
+psycopg2-binary==2.9.9
