--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-streamlit==1.51.0
-pandas==2.3.3
-numpy==2.3.5
-plotly==6.4.0
-sqlalchemy==2.0.44
-yfinance==0.2.66
+streamlit==1.31.1
+pandas==2.2.3
+numpy==1.26.4
+plotly==5.20.0
 
-python-dotenv==1.2.1
-requests==2.32.5
+sqlalchemy==2.0.25
+pyodbc==5.1.0
 
+yfinance==0.2.34
+python-dotenv==1.0.1
+requests==2.31.0
